--- a/css/estetica.css
+++ b/css/estetica.css
@@ -4,42 +4,45 @@
   -webkit box-sizing: border-box;
   border: box;
 }
-body{
+
+body {
   background-color: black;
   color: white;
   width: 100%;
   max-width: 2500px;
+  margin: 0;
+}
+.head1 {
+  margin:0;
+  padding:0;
+  padding-bottom:100px;
+  padding-top:100px;
 }
 
-#titulo{
+.titulo {
   color: red;
   text-align: center;
 }
-
-#general{
+.general {
   width: 100%;
   max-width: 2500px;
 }
-
-#primer{
-  background-image: url("img/th.jpeg");
-  background-repeat: no-repeat;
-}
-
-#psimg{
+.psimg {
   width: 100px;
   height: 100px;
 }
-
-#textoX{
+.textoX {
+  color: white;
+  font-weight:bold;
+}
+.textX {
+  text-align: center;
+  font-weight:bold;
+}
+.textops {
   color: white;
 }
-
-.textops{
-  color: white;
-}
-
-#xbox{
+.xbox {
   padding-top: 150px;
   background-image: url("../img/xbox.png") ;
   -webkit-background-size: cover;
@@ -47,14 +50,21 @@ body{
   -o-background-size: cover;
   background-size: cover;
   background-attachment: fixed;
-
   width: 100%;
   height: 100%;
   max-height: 500px;
   color: white;
 }
-
-#ps{
+.titleX {
+  color:green;
+  margin:0;
+  text-align:center;
+  font-weight:bold;
+}
+.separador {
+  padding: 150px;
+}
+.ps {
     background: url("../img/backgroundps.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -64,12 +74,17 @@ body{
     padding-bottom: 100px;
     height: 100%;
     max-height: 500px;
+    font-weight:bold;
 }
-
-.container-fluid{
+.titlePs {
+  text-align:center;
+  color:black;
+  font-weight:bold;
+}
+.container-fluid {
   background-color: black;
 }
-#full-screen-background-imagepong {
+.full-screen-background-imagepong {
         background-color: black;
         padding-top: 30px;
         z-index: -999;
@@ -79,41 +94,61 @@ body{
         top: 0;
         left: 0;
     }
-
-#contacto{
+.textps {
+  color:black;
+  text-align:center;
+}
+.contacto {
   color: white;
   background-color: rgb(29, 29, 29);
 }
-
-#textopc{
-
+.textopc {
   max-height: 150px;
 }
-
-#imagenXbox{
+.imagenXbox {
   max-height: 200px;
   max-width: 150px;
 }
-
-#pc{
+.pc {
   background-image: url("../img/backgroundpc.jpg");
-
   padding-bottom: 300px;
   padding-top: 150px;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  font-weight:bold;
 }
-#nintendo{
+
+.titlePc {
+  text-align:center;
+  color:blue;
+  font-weight:bold;
+}
+.textPC {
+  color:white;
+  text-align:center;
+
+}
+.nintendo {
   background-image: url("../img/backgroundnintendo.png");
-
   padding-bottom: 300px;
   padding-top: 150px;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+
+}
+.titleNin {
+  text-align:center;
+  color:red;
+  font-weight:bold;
 }
 
+.textonint {
+  color:white;
+  text-align:center;
+  font-weight:bold;
+}
 .arriba {
   position: fixed;
   bottom: 15px;
@@ -128,29 +163,27 @@ body{
   color: black;
   cursor: pointer;
 }
-
-#nintendomini{
+.tablame {
+  width: 100%;
+}
+.nintendomini{
   max-width: 150px;
   max-height: 150px;
 }
-
-#textonintendo{
+.textonintendo{
   text-align: center;
   color: white;
+  font-weight:bold;
 }
-
 .face {
   color: blue;
 }
-
 .twiter {
   color: rgb(0, 140, 255);
 }
-
 .insta {
   color: purple;
 }
-
 .nav li ul {
   display: none;
   position: absolute;
